# manitoba

./: README.md  pyproject.toml
manitoba/: main.py
